--- a/hotel6estrelas/src/main/resources/application.properties
+++ b/hotel6estrelas/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=hotel6estrelas
+spring.datasource.url=jdbc:h2:mem:hotelaria
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Ativa o console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
